--- a/p/quick/index.html
+++ b/p/quick/index.html
@@ -73,7 +73,9 @@ function exchange(arr, i, j) {
     (function($){
         var codes = $.id("codes");
         var container = $.id("codeContainer");
-        var codes = new Saber.CodeHighlight(codes, 2);
+        var codes = new Saber.CodeHighlight(codes, {
+        	"indent": 2
+        });
         codes.line("<div class=\"line\">${code}</div>").render(container)
     })(Saber)
 </script>
