change to define

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </ul>
   </div>
 </body>
-<script type="text/javascript" src="./saber/utils.js"></script>
+<script type="text/javascript" src="./saber/base.js"></script>
 <script type="text/javascript" src="./saber/animate.js"></script>
 <script type="text/javascript">
   (function($){
