--- a/p/heap/index.html
+++ b/p/heap/index.html
@@ -78,7 +78,7 @@ function log(base, value) {
 </body>
 <script type="text/javascript" src="maxHeap.js"></script>
 <script type="text/javascript" src="minHeap.js"></script>
-<script type="text/javascript" src="../../saber/utils.js"></script>
+<script type="text/javascript" src="../../saber/base.js"></script>
 <script type="text/javascript" src="../../js/plugins/codeHighlight.js"></script>
 <script type="text/javascript">
     (function($){
