--- a/p/menu/index.html
+++ b/p/menu/index.html
@@ -47,7 +47,7 @@
 	</ol>
 </div>
 </body>
-<script type="text/javascript" src="../../saber/utils.js"></script>
+<script type="text/javascript" src="../../saber/base.js"></script>
 <script type="text/javascript">
 	var ul = S.$('menu1');
 	S.on(ul, 'mouseover', showMenu);
