--- a/p/slider/index.html
+++ b/p/slider/index.html
@@ -33,7 +33,7 @@
 		</ol>
 	</div>
 </body>
-<script type="text/javascript" src="../../saber/utils.js"></script>
+<script type="text/javascript" src="../../saber/base.js"></script>
 <script type="text/javascript">
 	var input1 = S.$('slide_trigger_1');
 	var div = S.$('slide_outer_1');
