--- a/p/wbShare/index.html
+++ b/p/wbShare/index.html
@@ -30,7 +30,7 @@
 		</ol>
 	</div>
 </body>
-<script type="text/javascript" src="../../saber/utils.js"></script>
+<script type="text/javascript" src="../../saber/base.js"></script>
 <script type="text/javascript">
 (function($, window) {
 	var text = $.id("text"), shareBtn = $.id("shareBtn"),
