--- a/p/ani/index.html
+++ b/p/ani/index.html
@@ -26,7 +26,7 @@
 		</ol>
 	</div>
 </body>
-<script type="text/javascript" src="../../saber/utils.js"></script>
+<script type="text/javascript" src="../../saber/base.js"></script>
 <script type="text/javascript" src="../../saber/animate.js"></script>
 <script type="text/javascript">
 	var div = Saber.$("square");
