--- a/p/quick/index.html
+++ b/p/quick/index.html
@@ -66,7 +66,7 @@ function exchange(arr, i, j) {
 }
 </textarea>
 </body>
-<script type="text/javascript" src="../../saber/utils.js"></script>
+<script type="text/javascript" src="../../saber/base.js"></script>
 <script type="text/javascript" src="../../js/plugins/codeHighlight.js"></script>
 <script type="text/javascript" src="quickSort.js"></script>
 <script type="text/javascript">
