--- a/p/tagCloud/index.html
+++ b/p/tagCloud/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 </body>
-<script type="text/javascript" src="../../saber/utils.js"></script>
+<script type="text/javascript" src="../../saber/base.js"></script>
 <script type="text/javascript" src="../../saber/animate.js"></script>
 <script type="text/javascript" src="../../js/plugins/tagCloud_v2.js"></script>
 <script type="text/javascript">
