--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Vqun.github.io by vqun</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/top.css">
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
