--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
   <div style="background-color:#ef5638;width:100%;height:5px;position:fixed;top:0;left:0;z-index:1000"></div>
   <section class="menu" style="opacity:0" id="menu">
-    <header><a href="./index.html?ref=vqun">VQUN</a></header>
+    <header><a href="./index.html?ref=vqun" class="logo"><img src="./images/logo.jpg" /></a></header>
     <nav>
       <ul class="nav" id="menuWrap">
         <li><a href="#" data-action="modAct">HOME</a></li>
         <li><a href="#" data-action="modAct">ABOUT</a></li>
+        <li><a href="#" data-action="modAct">BLOG</a></li>
         <li><a href="#" data-action="modAct">PROJECTS</a></li>
       </ul>
       <br class="clear" />
@@ -49,6 +50,18 @@
       <article>
         <h1>About</h1>
         <p>Use vQun as my blog name.</p>
+      </article>
+    </div>
+    <div ref="blog" style="display:none;">
+      <article>
+        <h1>博文</h1>
+        <p><a href="/blog/?js/20130624" target="_blank">酱油的setTimeout</a></p>
+        <p><a href="/blog/?js/closure" target="_blank">读Javascript Closures文章</a></p>
+      </article>
+      <article>
+        <h1>Blog</h1>
+        <p><a href="/blog/?js/20130624" target="_blank">酱油的setTimeout</a></p>
+        <p><a href="/blog/?js/closure" target="_blank">读Javascript Closures文章</a></p>
       </article>
     </div>
     <div ref="projects" style="display:none;">
